[fix] Fix in-progress runs overlapping issue
- tune pulsating dots animation style

--- a/aim/web/ui/src/components/LineChart/LineChart.scss
+++ b/aim/web/ui/src/components/LineChart/LineChart.scss
@@ -154,13 +154,13 @@
 
   @keyframes inProgressIndicator {
     0% {
-      stroke-width: 0;
+      stroke-width: 0.6;
     }
     50% {
       stroke-width: 1.5;
     }
     100% {
-      stroke-width: 0;
+      stroke-width: 0.6;
     }
   }
 }
